Fixed Village page not showing all users

--- a/BuyItPlatform.React/src/Containers/Village/Village.css
+++ b/BuyItPlatform.React/src/Containers/Village/Village.css
@@ -1,11 +1,13 @@
-.holder-village {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(450px, 2fr));
-    justify-content:center;
-    justify-items:center;
-}
 .village-title {
     color: var(--text-color);
     font-weight: bold;
     font-size: 35px;
+}
+.villagers {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(450px, 2fr));
+    justify-content: center;
+    justify-items: center;
 }
